# Puzzlebot-Repository

./: .gitignore  README.md  env_jetson.sh
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/puzzlebot_ros/lib/puzzlebot_ros/: distance_control  goto_point  kalman  kalman_aruco  pwm_control  test_imu  velocity_control
install/puzzlebot_ros/share/puzzlebot_ros/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/computer_vision/: package.xml  setup.py
src/computer_vision/scripts/: capture_calibration.py  live_undistort.py  run_live_undistort_jetson.sh
src/perception/scripts/: capture_calibration.py
src/puzzlebot_ros/: setup.py
src/puzzlebot_ros/puzzlebot_ros/: controller_data.csv
te3002b_intelligent_robotics/week2/: README.md
te3002b_intelligent_robotics/week2/install/: local_setup.sh  setup.sh
te3002b_intelligent_robotics/week2/install/week2_puzzlebot_control/lib/week2_puzzlebot_control/: open_loop_square  (+2 more)
te3002b_intelligent_robotics/week2/log/: latest_build
te3002b_intelligent_robotics/week2/week2_puzzlebot_control/: package.xml  setup.cfg  setup.py
te3002b_intelligent_robotics/week2/week2_puzzlebot_control/week2_puzzlebot_control/: open_loop_square.py  waypoint_follower.py
te3002b_intelligent_robotics/week3/: README.md
te3002b_intelligent_robotics/week3/week3_puzzlebot_interfaces/: CMakeLists.txt  package.xml
te3002b_intelligent_robotics/week3/week3_puzzlebot_interfaces/msg/: GoalPair.msg
te3002b_intelligent_robotics/week3/week3_puzzlebot_pid/: package.xml  setup.cfg  setup.py
te3002b_intelligent_robotics/week4/: README.md  traffic_light.py  trafficlight_waypoint.py
(+6 files in other folders)
